# invman-pip-package-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
Inv-Man/: InvMan.py
