[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Custom_Unicode_Paser"
version = "1.0.0"
authors = [
  { name="Joseph Kuntson", email="jmknutson2012@gmail.com" },
]
description = "A_Custom_Unicode_Paser"
readme = "README.md"
changelog = "CHANGELOG.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Joey1222/customunicodepaserpython"
"Bug Tracker" = "https://github.com/Joey1222/customunicodepaserpython/issues"