[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Inv-Man"
version = "1.0.0"
authors = [
  { name="Joseph Kuntson", email="jmknutson2012@gmail.com" },
]
description = "A Inv Man"
readme = "README.md"
changelog = "CHANGELOG.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Joey1222/invman-pip-package-python"
"Bug Tracker" = "https://github.com/Joey1222/invman-pip-package-python/issues"